<resources>
    <string name="app_name">DOT-NOTE</string>
    <string name="welcome">Welcome to DOT-NOTE!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Need an account? Sign Up</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="are_you">Are you:</string>
    <string name="help_us">it will help us find content for you</string>
    <string name="interested_in">What are you interested in?</string>
    <string name="start">Start</string>
    <string name="get_pro">Get DOTE-NOTE PRO</string>
    <string name="share_application">Share application</string>
    <string name="profile_settings">Profile settings</string>
    <string name="saved_content">Saved content</string>
    <string name="exit">Exit</string>
    <string name="night_mode">Night mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="begimai_amatova">Begimai Amatova</string>
    <string name="mail">amatova.b20@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
</resources>