<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".Settings">

    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bott_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/my_navigation" />


    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/title_white"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/search"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/settings"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintBottom_toTopOf="@id/profile"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/orange"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toTopOf="@id/pro">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/photo"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begimai_amatova"
            style="@style/white_little"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintTop_toTopOf="@id/photo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            style="@style/white_little"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="@id/pro"
        app:layout_constraintTop_toTopOf="@id/pro"
        app:layout_constraintBottom_toBottomOf="@id/pro"/>
    <Button
        android:id="@+id/pro"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/get_pro"
        style="@style/black_little"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile">
    </Button>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro">

        <Button
            android:id="@+id/share"
            style="@style/black_little"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start"
            android:text="@string/share_application" />

        <Button
            android:id="@+id/prof_set"
            style="@style/black_little"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start"
            android:text="@string/profile_settings" />

        <Button
            android:id="@+id/saved"
            style="@style/black_little"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start"
            android:text="@string/saved_content" />

        <Button
            android:id="@+id/exit"
            style="@style/black_little"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start"
            android:text="@string/exit" />

        <Button
            android:id="@+id/night_mode"
            style="@style/black_little"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start"
            android:text="@string/night_mode" />

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bott_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>