<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_black_orange"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/progress_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/progress"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_white"/>

        <Button
            android:id="@+id/progress1"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_black"/>

        <Button
            android:id="@+id/progress2"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:background="@drawable/button_black"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@id/progress_linear"
        app:layout_constraintTop_toBottomOf="@id/progress_linear"
        app:layout_constraintBottom_toBottomOf="@+id/welcome"/>

    <TextView
        android:id="@+id/welcome"
        style="@style/title_white"
        android:layout_width="211dp"
        android:layout_height="84dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/progress_linear"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <Button
        android:id="@+id/email"
        style="@style/grey"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_stroke"
        android:text="@string/email"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <Button
        android:id="@+id/password"
        style="@style/grey"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_stroke"
        android:text="@string/password"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email">

    </Button>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:src="@drawable/rectangle_2" />

        <TextView
            style="@style/white_little"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/remember_me" />

        <TextView
            style="@style/white_little"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        style="@style/white_little"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/black_corner"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/details"
        app:layout_constraintStart_toStartOf="@id/details"
        app:layout_constraintTop_toBottomOf="@id/details"/>

    <TextView
        android:id="@+id/account"
        style="@style/white_little"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <LinearLayout
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="@+id/account"
        app:layout_constraintStart_toStartOf="@id/account"
        app:layout_constraintTop_toBottomOf="@id/account">

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_5" />

        <TextView
            style="@style/white_medium"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/or">

        <Button
            android:id="@+id/google"
            style="@style/white_little1"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_corner"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/facebook"
            style="@style/white_little1"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_corner"
            android:text="@string/continue_with_facebook"/>

        <Button
            android:id="@+id/apple"
            style="@style/white_little1"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/black_corner"
            android:text="@string/continue_with_apple"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>