<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_black_orange"
    tools:context=".AreYou">

    <LinearLayout
        android:id="@+id/progress_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/progress"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_black" />

        <Button
            android:id="@+id/progress1"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_white" />

        <Button
            android:id="@+id/progress2"
            android:layout_width="90dp"
            android:layout_height="7dp"
            android:background="@drawable/button_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/are_you"
        style="@style/title_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/are_you"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/progress_linear"
        app:layout_constraintTop_toBottomOf="@id/progress_linear" />

    <GridLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/are_you">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/student" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/teacher" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/self_learner" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/other" />
    </GridLayout>

    <TextView
        android:id="@+id/help_us"
        style="@style/white_little"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/help_us"
        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/options" />

    <Button
        android:id="@+id/next"
        style="@style/white_little"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:background="@drawable/orange_corner"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/help_us"
        app:layout_constraintTop_toBottomOf="@id/help_us" />

</androidx.constraintlayout.widget.ConstraintLayout>